# TritonLinOSS

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  create_configs.py  inference.py  postprocess_results.py  pyproject.toml  run_experiment.py  sample_configs.py  train.py
data_dir/: create_decay_data.py  datasets.py  project_dir.py
experiment_configs/repeats/LinOSS/: EthanolConcentration.json  Heartbeat.json  MotorImagery.json  SelfRegulationSCP1.json
experiment_configs/repeats/LinOSS_IMEX_damped/: SelfRegulationSCP1.json
linoss/: train.py
linoss/data/: create_dataset.py  create_decay_data.py  dataloader.py  datasets.py  download_uea.py  generate_paths.py  process_ppg.py  process_uea.py  toy_dataset.py
linoss/data_processing/: create_dataset.py  dataloader.py  dataset.py  generate_coeffs.py  generate_paths.py
linoss/dataloaders/: datasets.py  generate_paths.py
linoss/models/: LRU.py  LinOSS.py  LogNeuralCDEs.py  RNN.py  S5.py  Transformer.py  common.py  create_model.py  generate_model.py
models/: LRU.py  LinOSS.py  S5.py  generate_model.py
plot_performance/: out.txt  plot_perf.py
results/D-LinOSS/EigenWorms/: id_0.txt
results/D-LinOSS/EthanolConcentration/: id_0.txt
results/D-LinOSS/Heartbeat/: id_0.txt
results/D-LinOSS/MotorImagery/: id_0.txt
results/D-LinOSS/SelfRegulationSCP1/: id_0.txt
results/D-LinOSS/SelfRegulationSCP2/: id_0.txt
results/D-LinOSS/Weather/: id_0.txt
results/LinOSS_IMEX_damped/EthanolConcentration/: id_0.txt
results/LinOSS_IMEX_damped/MotorImagery/: id_0.txt
results/LinOSS_IMEX_damped/SelfRegulationSCP1/: id_0.txt
results/LinOSS_IMEX_damped/SelfRegulationSCP2/: id_0.txt
results/LinOSS_IMEX_damped/ppg/: id_0.txt
scripts/: analyze_parameters.py  create_experiment.py  download_uea.py  postprocess_results.py  process_results.py  process_uea.py  run_experiment.py  run_inference.py
scripts/data/: create_configs.py  create_toy_data.py  download_lra.sh  sample_configs.py
scripts/run/: run_experiment.py  run_inference.py  submit_batch.sbatch  submit_batch.sh
src/damped_linoss/: __init__.py  test.py  train.py
src/damped_linoss/data/: create_dataset.py  dataloader.py
src/damped_linoss/models/: LRU.py  LinOSS.py  RNN.py  S5.py  TorchLinOSS.py  (+4 more)
src/linoss/: train.py
(+111 files in other folders)
