[project]
name = "damped-linoss"
version = "0.1.0"
description = "Damped Linear Oscillatory State Space Models in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.0.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.0",
    "sktime>=0.30.0",
]

[project.optional-dependencies]
cuda = ["triton>=3.0.0"]
dev = ["pytest>=8.0.0"]
jax = [
    "equinox>=0.13.0",
    "jax[cuda12]>=0.6.2",
    "optax>=0.2.5",
    "jax_triton>=0.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["damped_linoss*"]
